--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+#root{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  height:100vh;
+  background-color:#f5f5f5;
+  width: 100vw;
+}
